add if conversion